fix overflow

--- a/src/components/_cards/PlaylistCard/PlaylistCard.module.scss
+++ b/src/components/_cards/PlaylistCard/PlaylistCard.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+  overflow: hidden;
   border-radius: 0.5rem;
   background-color: var(--color-background-3);
 
